cabal-version:      2.4
name:               functional
version:            0.1.0.0


author:              Praveer

maintainer:          praveertiwari3@gmail.com

         

category:            Game

build-type:          Simple


extra-source-files:  ChangeLog.md




executable functional
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:       Game
                     , Logic
                     , Rendering
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9 && <4.10
                     , array
                     , gloss
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
